# ap_server

./: .gitignore  CMakeLists.txt  README.md  detections.db  setup_and_build.sh  setup_network.bat  setup_network.ps1  start_servers.bat  start_servers.ps1  start_servers.sh
backend/: .gitignore  CMakeLists.txt  detections.db  manage_mock_data.py  setup_and_build.sh
backend/include/: DatabaseManager.h  DetectionGateway.h  DetectionService.h
backend/src/: DatabaseManager.cpp  DetectionGateway.cpp  DetectionService.cpp  main.cpp
backend/tests/: test_database.cpp
frontend/: app.js  camera.html  camera.js  device.html  device.js  index.html  style.css
include/: DatabaseManager.h  DetectionService.h
src/: DatabaseManager.cpp  DetectionService.cpp
tests/: test_database.cpp
